--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4176,7 +4176,8 @@ input, select, textarea {
 
 	.features img {
 		width: 100%;
-		max-height: 320px;
+		max-height: 330px;
+		/* object-fit: contain; */
 	}
 
 	#flex-this {
